[tool.poetry]
name = "coalmine"
version = "0.1.0"
description = "k8s nginx ingress canary demo"
authors = ["Vivek Kushwaha <yoursvivek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
